structures de base

--- a/navigation/localisation/package.xml
+++ b/navigation/localisation/package.xml
@@ -50,6 +50,8 @@
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>message_runtime</run_depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
