--- a/navigation/localisation/CMakeLists.txt
+++ b/navigation/localisation/CMakeLists.txt
@@ -81,7 +81,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include/localisation
+   INCLUDE_DIRS include/localisation
 #  LIBRARIES localisation
    CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy sensor_msgs message_runtime
 #  DEPENDS system_lib
@@ -170,7 +170,7 @@ set_target_properties(fake_scan_node PROPERTIES COMPILE_FLAGS -std=c++0x)
 add_dependencies(test_reco_segment localisation_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 add_dependencies(test_reco localisation_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 add_dependencies(test_reco_machines localisation_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
-add_dependencies(landmarks_extraction_node localisation_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
+add_dependencies(landmarks_extraction_node localisation_generate_messages_cpp {catkin_EXPORTED_TARGETS})
 add_dependencies(fake_scan_node localisation_generate_messages_cpp ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
