petites modifs et codage des fonctions

--- a/navigation/localisation/CMakeLists.txt
+++ b/navigation/localisation/CMakeLists.txt
@@ -136,11 +136,17 @@ add_executable(
   try
   src/try.cpp)
 
+#add_executable(
+#  EKF_node
+#  src/EKF.cpp
+#  src/EKF_functions.cpp)
+
 set_target_properties(landmarks_extraction_node PROPERTIES COMPILE_FLAGS -std=c++0x)
 set_target_properties(fake_scan_node PROPERTIES COMPILE_FLAGS -std=c++0x)
 set_target_properties(odometry_correction_node PROPERTIES COMPILE_FLAGS -std=c++0x)
 set_target_properties(visualisation PROPERTIES COMPILE_FLAGS -std=c++0x)
 set_target_properties(try PROPERTIES COMPILE_FLAGS -std=c++0x)
+#set_target_properties(EKF_node PROPERTIES COMPILE_FLAGS -std=c++0x)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
@@ -164,10 +170,16 @@ target_link_libraries(
 )
 target_link_libraries(
   visualisation
-  ${catkin_LIBRARIES})
+  ${catkin_LIBRARIES}
+)
 target_link_libraries(
   try
-  ${catkin_LIBRARIES})
+  ${catkin_LIBRARIES}
+)
+#target_link_libraries(
+#  EKF_node
+#  ${catkin_LIBRARIES}
+#)
 
 #############
 ## Install ##
