--- a/navigation/localisation/CMakeLists.txt
+++ b/navigation/localisation/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   sensor_msgs
   visualization_msgs
+  message_generation
   Eigen
   REQUIRED
 )
