--- a/navigation/localisation/package.xml
+++ b/navigation/localisation/package.xml
@@ -45,6 +45,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
   
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
