--- a/navigation/localisation/package.xml
+++ b/navigation/localisation/package.xml
@@ -48,6 +48,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>cmake_modules</build_depend>
   <build_depend>deplacement_msg</build_depend>
+  <build_depend>tf</build_depend>
   
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
@@ -56,6 +57,7 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>deplacement_msg</run_depend>
+  <run_depend>tf</run_depend>
   
 
 
