Normalisation des namespaces. Voir description detaillee
Remise en place (sans effacement des fichiers) du tf_broadcaster dans
hardware/.
Correction d'une erreur de compilation sur le CMakeLists.txt de
pathfinder/.
Création d'un launchfile pour une simulation à six robots. Modification
du monde à six robots.

--- a/navigation/localisation/CMakeLists.txt
+++ b/navigation/localisation/CMakeLists.txt
@@ -217,15 +217,15 @@ target_link_libraries(
   ${catkin_LIBRARIES}
 )
 
-add_executable(
-	tf_broadcaster_node
-    src/tf_broadcaster_node.cpp
-    src/tf_broadcaster.cpp 
-)
-target_link_libraries(
-	tf_broadcaster_node
-  	${catkin_LIBRARIES}
-)
+# add_executable(
+# 	tf_broadcaster_node
+#     src/tf_broadcaster_node.cpp
+#     src/tf_broadcaster.cpp 
+# )
+# target_link_libraries(
+# 	tf_broadcaster_node
+#   	${catkin_LIBRARIES}
+# )
 
 
 #############
