Normalisation des noms de classes et de noeuds Const correctnessisation

--- a/navigation/localisation/CMakeLists.txt
+++ b/navigation/localisation/CMakeLists.txt
@@ -111,8 +111,8 @@ include_directories(
 
 ## Declare a cpp executable
 add_executable(
-  landmarks_extraction_node
-  src/landmarks_extraction_node.cpp
+  LandmarksExtraction_node
+  src/LandmarksExtraction_node.cpp
   src/landmarks_detection_utils.cpp
   src/math_functions.cpp
   src/conversion_functions.cpp
@@ -122,10 +122,10 @@ add_executable(
   src/Segment.cpp
   src/Model.cpp
   src/Machine.cpp)
-set_target_properties(landmarks_extraction_node PROPERTIES COMPILE_FLAGS -std=c++0x)
-add_dependencies(landmarks_extraction_node deplacement_msg_gencpp ${catkin_EXPORTED_TARGETS})
+set_target_properties(LandmarksExtraction_node PROPERTIES COMPILE_FLAGS -std=c++0x)
+add_dependencies(LandmarksExtraction_node deplacement_msg_gencpp ${catkin_EXPORTED_TARGETS})
 target_link_libraries(
-  landmarks_extraction_node
+  LandmarksExtraction_node
   ${catkin_LIBRARIES}
 )
 
@@ -169,29 +169,19 @@ target_link_libraries(
 )
 
 add_executable(
-  ekf_node
-  src/ekf_node.cpp
-  src/EKF_class.cpp)
-set_target_properties(ekf_node PROPERTIES COMPILE_FLAGS -std=c++0x)
-add_dependencies(ekf_node deplacement_msg_gencpp ${catkin_EXPORTED_TARGETS})
+  Ekf_node
+  src/Ekf_node.cpp
+  src/Ekf.cpp)
+set_target_properties(Ekf_node PROPERTIES COMPILE_FLAGS -std=c++0x)
+add_dependencies(Ekf_node deplacement_msg_gencpp ${catkin_EXPORTED_TARGETS})
 target_link_libraries(
-  ekf_node
+  Ekf_node
   ${catkin_LIBRARIES}
 )
 
 add_executable(
-  EKF_client
-  src/EKF_client.cpp)
-set_target_properties(EKF_client PROPERTIES COMPILE_FLAGS -std=c++0x)
-add_dependencies(EKF_client deplacement_msg_gencpp ${catkin_EXPORTED_TARGETS})
-target_link_libraries(
-  EKF_client
-  ${catkin_LIBRARIES}
-)
-
-add_executable(
-  Cartographie
-  src/Cartographie.cpp
+  Cartographie_node
+  src/Cartographie_node.cpp
   src/landmarks_detection_utils.cpp
   src/math_functions.cpp
   src/conversion_functions.cpp
@@ -200,30 +190,30 @@ add_executable(
   src/Machine.cpp
   src/Line.cpp
   src/Model.cpp)
-set_target_properties(Cartographie PROPERTIES COMPILE_FLAGS -std=c++0x)
-add_dependencies(Cartographie deplacement_msg_gencpp ${catkin_EXPORTED_TARGETS})
+set_target_properties(Cartographie_node PROPERTIES COMPILE_FLAGS -std=c++0x)
+add_dependencies(Cartographie_node deplacement_msg_gencpp ${catkin_EXPORTED_TARGETS})
 target_link_libraries(
-  Cartographie
+  Cartographie_node
   ${catkin_LIBRARIES}
 )
 
 add_executable(
-  fake_scan_node
-  src/fake_scan_node.cpp)
-set_target_properties(fake_scan_node PROPERTIES COMPILE_FLAGS -std=c++0x)
-add_dependencies(fake_scan_node deplacement_msg_gencpp ${catkin_EXPORTED_TARGETS})
+  FakeScan_node
+  src/FakeScan_node.cpp)
+set_target_properties(FakeScan_node PROPERTIES COMPILE_FLAGS -std=c++0x)
+add_dependencies(FakeScan_node deplacement_msg_gencpp ${catkin_EXPORTED_TARGETS})
 target_link_libraries(
-  fake_scan_node
+  FakeScan_node
   ${catkin_LIBRARIES}
 )
 
 # add_executable(
-# 	tf_broadcaster_node
-#     src/tf_broadcaster_node.cpp
-#     src/tf_broadcaster.cpp 
+# 	TfBroadcaster_node
+#     src/TfBroadcaster.cpp 
+#     src/TfBroadcaster_node.cpp
 # )
 # target_link_libraries(
-# 	tf_broadcaster_node
+# 	TfBroadcaster_node
 #   	${catkin_LIBRARIES}
 # )
 
