--- a/navigation/localisation/package.xml
+++ b/navigation/localisation/package.xml
@@ -49,6 +49,7 @@
   <build_depend>cmake_modules</build_depend>
   <build_depend>deplacement_msg</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>visualization_msgs</build_depend>
   
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
@@ -58,6 +59,7 @@
   <run_depend>message_runtime</run_depend>
   <run_depend>deplacement_msg</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>visualization_msgs</run_depend>
   
 
 
