--- a/navigation/localisation/package.xml
+++ b/navigation/localisation/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The localisation package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="tdanel@todo.todo">tdanel</maintainer>
@@ -49,7 +49,8 @@
   <build_depend>cmake_modules</build_depend>
   <build_depend>deplacement_msg</build_depend>
   <build_depend>tf</build_depend>
-  
+  <build_depend>message_filters</build_depend>
+
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>roscpp</run_depend>
@@ -58,7 +59,8 @@
   <run_depend>message_runtime</run_depend>
   <run_depend>deplacement_msg</run_depend>
   <run_depend>tf</run_depend>
-  
+  <run_depend>message_filters</run_depend>
+
 
 
 
