--- a/navigation/localisation/package.xml
+++ b/navigation/localisation/package.xml
@@ -51,6 +51,7 @@
   <build_depend>tf</build_depend>
   <build_depend>message_filters</build_depend>
   <build_depend>geometry_utils</build_depend>
+  <build_depend>comm_msg</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
@@ -62,6 +63,7 @@
   <run_depend>tf</run_depend>
   <run_depend>message_filters</run_depend>
   <run_depend>geometry_utils</run_depend>
+  <run_depend>comm_msg</run_depend>
 
 
 
