--- a/navigation/localisation/CMakeLists.txt
+++ b/navigation/localisation/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(catkin REQUIRED COMPONENTS
   message_filters
 	geometry_utils
 	comm_msg
+	common_utils
 )
 
 ## System dependencies are found with CMake's conventions
@@ -90,7 +91,7 @@ find_package(Eigen REQUIRED)
 catkin_package(
    INCLUDE_DIRS include/localisation /usr/include/eigen3
    LIBRARIES localisation
-   CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy sensor_msgs message_runtime geometry_utils comm_msg
+   CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy sensor_msgs message_runtime geometry_utils comm_msg common_utils
 #  DEPENDS system_lib
 )
 
@@ -119,7 +120,6 @@ add_executable(
   src/landmarks_detection_utils.cpp
   src/math_functions.cpp
   src/conversion_functions.cpp
-  src/cartographie_utils.cpp
   src/LaserScan.cpp
   src/Line.cpp
   src/Segment.cpp
@@ -158,7 +158,6 @@ add_executable(
   src/landmarks_detection_utils.cpp
   src/math_functions.cpp
   src/conversion_functions.cpp
-  src/cartographie_utils.cpp
   src/Segment.cpp
   src/Machine.cpp
   src/Line.cpp
