--- a/navigation/localisation/package.xml
+++ b/navigation/localisation/package.xml
@@ -52,6 +52,7 @@
   <build_depend>message_filters</build_depend>
   <build_depend>geometry_utils</build_depend>
   <build_depend>comm_msg</build_depend>
+  <build_depend>common_utils</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
@@ -64,6 +65,7 @@
   <run_depend>message_filters</run_depend>
   <run_depend>geometry_utils</run_depend>
   <run_depend>comm_msg</run_depend>
+  <run_depend>common_utils</run_depend>
 
 
 
