--- a/navigation/localisation/package.xml
+++ b/navigation/localisation/package.xml
@@ -55,7 +55,8 @@
   <build_depend>comm_msg</build_depend>
   <build_depend>common_utils</build_depend>
   <build_depend>ar_track_alvar</build_depend>
-  <build_depend>ar_track_alvar_msgs</build_depend>  
+  <build_depend>ar_track_alvar_msgs</build_depend>
+  <build_depend>robotino_msgs</build_depend>  
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
@@ -72,6 +73,7 @@
   <run_depend>common_utils</run_depend>
   <run_depend>ar_track_alvar</run_depend>
   <run_depend>ar_track_alvar_msgs</run_depend>
+  <run_depend>robotino_msgs</run_depend>
 
 
 
